feat: Major architectural enhancements for flexible EO model inference
This commit introduces significant improvements across the codebase, focusing on
enhanced modularity, memory management, and support for diverse Earth Observation models.

- **Project Renaming and Documentation Update:**
  - Renamed `src/ben_v2` to `src/eo_core` to better represent a general-purpose Earth Observation core library.
  - Updated `README.md` with the new project name and a refined description.
  - Updated all documentation files (`docs/*.md`) to reflect the new project name and the `src/eo_core` directory structure.
  - Consolidated utility functions into the new `src/eo_core/utils.py` module, deprecating old scattered utilities.

- **Enhanced Model Adapters and Prithvi Integration:**
  - Introduced `src/eo_core/adapters/prithvi_adapter.py` for seamless integration of the Prithvi-100M flood segmentation model. This includes custom model components (ConvModule, FCNHead) and Hugging Face Hub weight loading.
  - Significantly updated `src/eo_core/adapters/bigearthnet_adapter.py` with explicit `is_segmentation`, `num_classes`, `labels`, and `color_map` properties, making it more robust and self-describing.
  - Configured `configs/model/prithvi_flood_segmentation.yaml` for the new Prithvi adapter.

- **Advanced Memory Management and Batching:**
  - Refined automatic batch size estimation in `src/eo_core/memory_utils.py` by reverting to probing with batch sizes 1 and 4. This provides a more consistent marginal memory estimate for optimal GPU utilization.
  - Increased the maximum allowed batch size from 256 to 4096 to prevent artificial bottlenecks on high-memory GPUs.
  - Implemented detailed time-based logging for preprocessing, inference, postprocessing, and reconstruction phases within `src/eo_core/process.py` for performance analysis.

- **Flexible Data Handling and I/O:**
  - Improved `src/eo_core/data.py` to allow pattern-based band finding for Sentinel-1/2, enhancing flexibility in

--- a/configs/data_source/sentinel_2.yaml
+++ b/configs/data_source/sentinel_2.yaml
@@ -14,3 +14,7 @@ data_source:
   
   use_sentinel_1: false
   s1_bands: ['VV', 'VH']
+  
+  # File structure patterns
+  s2_file_pattern: "S2*.SAFE/**/*{band_name}*.jp2"
+  s1_file_pattern: "S1*.SAFE/measurement/*{band_name}*.tiff"
