--- a/configs/model/convnext_s2.yaml
+++ b/configs/model/convnext_s2.yaml
@@ -1,7 +1,5 @@
 # @package _global_
 model:
-  _target_: ben_v2.model.BigEarthNetv2_0_ImageClassifier.from_pretrained
-  pretrained_model_name_or_path: "BIFOLD-BigEarthNetv2-0/convnextv2_base-s2-v0.2.0"
   
   # Adapter configuration
   adapter:
@@ -9,7 +7,6 @@ model:
     class: "BigEarthNetAdapter"
     params:
       model_config:
-        _target_: ben_v2.model.BigEarthNetv2_0_ImageClassifier.from_pretrained
         pretrained_model_name_or_path: "BIFOLD-BigEarthNetv2-0/convnextv2_base-s2-v0.2.0"
       
       bands: ['B02', 'B03', 'B04', 'B05', 'B06', 'B07', 'B08', 'B8A', 'B11', 'B12']
@@ -20,4 +17,7 @@ model:
       
       patch_size: 120
       stride: 60
-      batch_size: 32
+      batch_size: "auto"
+pipeline:
+  output:
+    save_gradient_preview: true
