--- a/configs/model/resnet_all.yaml
+++ b/configs/model/resnet_all.yaml
@@ -1,8 +1,6 @@
 # @package _global_
 model:
-  _target_: ben_v2.model.BigEarthNetv2_0_ImageClassifier.from_pretrained
-  pretrained_model_name_or_path: "BIFOLD-BigEarthNetv2-0/resnet50-all-v0.2.0"
-  use_prefetcher: false
+  use_prefetcher: true
   
   # Adapter configuration
   adapter:
@@ -10,7 +8,6 @@ model:
     class: "BigEarthNetAdapter"
     params:
       model_config:
-        _target_: ben_v2.model.BigEarthNetv2_0_ImageClassifier.from_pretrained
         pretrained_model_name_or_path: "BIFOLD-BigEarthNetv2-0/resnet50-all-v0.2.0"
       
       bands: ["VV", "VH", "B02", "B03", "B04", "B05", "B06", "B07", "B08", "B8A", "B11", "B12"]
@@ -27,4 +24,7 @@ model:
       
       patch_size: 120
       stride: 60
-      batch_size: 32
+      batch_size: "auto"
+pipeline:
+  output:
+    save_gradient_preview: true
