fix(prithvi): Enable temporal crop classification and fix OOM
- Updated PrithviAdapter for 3-frame temporal input (replicated).
- Fixed model depth config (12 -> 6) to match checkpoint.
- Improved memory estimation to check peak usage and prevent OOM.
- Updated classes and colors for Crop Classification.
- Fixed viewer generation and reporter window slicing.

--- a/configs/model/convnext_s2.yaml
+++ b/configs/model/convnext_s2.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 model:
-  
+  use_prefetcher: true
   # Adapter configuration
   adapter:
     path: "eo_core.adapters.bigearthnet_adapter"
