--- a/configs/data_source/sentinel_2.yaml
+++ b/configs/data_source/sentinel_2.yaml
@@ -16,5 +16,5 @@ data_source:
   s1_bands: ['VV', 'VH']
   
   # File structure patterns
-  s2_file_pattern: "S2*.SAFE/**/IMG_DATA/**/*{band_name}*.jp2"
+  s2_file_pattern: "S2*.SAFE/GRANULE/*/IMG_DATA/R{resolution}m/*_{band_name}_{resolution}m.jp2"
   s1_file_pattern: "S1*.SAFE/measurement/*{band_name}*.tiff"
